fix: resolve canonical URL and duplicate content issues
- Add JavaScript redirect for index.html to root domain
- Update robots.txt to disallow index.html crawling
- Add _config.yml for GitHub Pages URL normalization
- Implement proper canonical URL enforcement
- Fix Google Search Console 'Alternative page with proper canonical tag' error

This resolves the duplicate content issue between:
- https://pay24.store/ (canonical)
- https://pay24.store/index.html (now redirected)

Changes:
- index.html: Added history.replaceState redirect
- robots.txt: Added Disallow: /index.html for all user agents
- _config.yml: New Jekyll configuration for canonical URLs

--- a/index.html
+++ b/index.html
@@ -180,6 +180,14 @@
     }
     </script>
 
+    <!-- Canonical URL enforcement for index.html -->
+    <script>
+    // Redirect index.html to root domain to avoid duplicate content
+    if (window.location.pathname === '/index.html') {
+        window.history.replaceState(null, null, '/');
+    }
+    </script>
+
 </head>
 <body class="bg-slate-50 text-slate-700">
 
