--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
     <meta name="twitter:description" content="소액결제, 정보이용료, 신용카드 한도를 24시간 안전하게 현금으로! 오렌지Pay에서 빠르고 신뢰할 수 있게 해결하세요.">
     <meta name="twitter:image" content="https://pay24.store/img/og-image.webp">
     
+    <!-- PWA Support -->
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="application-name" content="오렌지Pay">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="오렌지Pay">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="msapplication-config" content="/browserconfig.xml">
+    <meta name="msapplication-TileColor" content="#F97316">
+    <meta name="msapplication-tap-highlight" content="no">
+    
     <!-- Favicon and Theme -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -51,6 +63,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Font Awesome -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- Custom Styles & Tailwind Config -->
@@ -119,7 +133,44 @@
       ],
       "areaServed": "KR",
       "telephone": "+82-10-5842-9536",
-      "openingHours": "Mo-Su 00:00-24:00"
+      "openingHours": "Mo-Su 00:00-24:00",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "247",
+        "bestRating": "5",
+        "worstRating": "1"
+      },
+      "review": [
+        {
+          "@type": "Review",
+          "author": {
+            "@type": "Person",
+            "name": "김철수"
+          },
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5"
+          },
+          "datePublished": "2024-12-15",
+          "reviewBody": "24시간 내내 이용 가능하고 수수료도 저렴해서 만족합니다. 신속한 처리에 감사드려요."
+        },
+        {
+          "@type": "Review",
+          "author": {
+            "@type": "Person", 
+            "name": "이영희"
+          },
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5", 
+            "bestRating": "5"
+          },
+          "datePublished": "2024-12-10",
+          "reviewBody": "안전하고 신뢰할 수 있는 서비스입니다. 상담도 친절하고 빠른 처리가 좋네요."
+        }
+      ],
         ,
         "sameAs": [
             "https://www.facebook.com/",
