🔧 구조화된 데이터 JSON-LD 파싱 오류 수정
- FinancialService 스키마에서 잘못된 JSON 구조 수정
- review 배열 후 불필요한 ',' 제거
- sameAs와 contactPoint 속성을 올바른 위치로 이동
- Google Search Console '}' 또는 개체 구성 요소 이름 누락 오류 해결
- 구조화된 데이터 검증을 위한 JSON 구문 수정

--- a/index.html
+++ b/index.html
@@ -171,20 +171,20 @@
           "reviewBody": "안전하고 신뢰할 수 있는 서비스입니다. 상담도 친절하고 빠른 처리가 좋네요."
         }
       ],
-        ,
-        "sameAs": [
-            "https://www.facebook.com/",
-            "https://twitter.com/",
-            "https://www.instagram.com/"
-        ],
-        "contactPoint": [{
-            "@type": "ContactPoint",
-            "telephone": "+82-10-5842-9536",
-            "contactType": "customer service",
-            "areaServed": "KR",
-            "availableLanguage": ["Korean"]
-        }]
-        }
+      "sameAs": [
+        "https://www.facebook.com/",
+        "https://twitter.com/",
+        "https://www.instagram.com/"
+      ],
+      "contactPoint": [{
+        "@type": "ContactPoint",
+        "telephone": "+82-10-5842-9536",
+        "contactType": "customer service",
+        "areaServed": "KR",
+        "availableLanguage": ["Korean"]
+      }]
+    }
+    </script>
     </script>
         <!-- WebSite schema for sitelinks search box -->
         <script type="application/ld+json">
