🔧 FinancialService 스키마 address 필드 추가
- Google Search Console 오류 해결: 'address' 입력란이 누락되었습니다
- FinancialService 스키마에 address 속성 추가
- 온라인 서비스 특성 반영: addressCountry, addressRegion, addressLocality 설정
- 구조화된 데이터 검증을 위한 PostalAddress 스키마 적용

--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
       "areaServed": "KR",
       "telephone": "+82-10-5842-9536",
       "openingHours": "Mo-Su 00:00-24:00",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "KR",
+        "addressRegion": "Online Service",
+        "addressLocality": "대한민국"
+      },
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.8",
