SEO 가이드 정합성 개선: sitemap 정정(경로/블로그 URL), 블로그 인덱스 canonical/OG/url 정리, WebSite SearchAction 보강, 약관/개인정보 페이지 링크 수정

--- a/index.html
+++ b/index.html
@@ -201,7 +201,15 @@
             "name": "오렌지Pay",
             "potentialAction": {
                 "@type": "SearchAction",
-                "target": "https://pay24.store/?s={search_term_string}",
+                "target": {
+                    "@type": "EntryPoint",
+                    "urlTemplate": "https://pay24.store/search.html?s={search_term_string}",
+                    "inLanguage": "ko-KR",
+                    "actionPlatform": [
+                        "http://schema.org/DesktopWebPlatform",
+                        "http://schema.org/MobileWebPlatform"
+                    ]
+                },
                 "query-input": "required name=search_term_string"
             }
         }
