--- a/privacy.html
+++ b/privacy.html
@@ -20,7 +20,7 @@
       <li>고객 권리: 개인정보 열람, 정정, 삭제, 처리정지 요청 가능</li>
     </ul>
     <p class="text-gray-500 text-sm mb-4">자세한 내용은 고객센터로 문의해 주세요.</p>
-    <a href="/index.html" class="text-sm text-gray-400 hover:text-orange-500">← 메인으로 돌아가기</a>
+  <a href="/" class="text-sm text-gray-400 hover:text-orange-500">← 메인으로 돌아가기</a>
   </main>
 </body>
 </html>
