--- a/terms.html
+++ b/terms.html
@@ -19,7 +19,7 @@
       <li>고객 정보는 안전하게 보호되며, 무단 제공되지 않습니다.</li>
       <li>서비스 이용 중 문의사항은 언제든 고객센터로 연락해 주세요.</li>
     </ul>
-    <a href="/index.html" class="text-sm text-gray-400 hover:text-orange-500">← 메인으로 돌아가기</a>
+  <a href="/" class="text-sm text-gray-400 hover:text-orange-500">← 메인으로 돌아가기</a>
   </main>
 </body>
 </html>
