검색 노출 개선: SearchAction 실페이지(/search.html) 추가, 헤더 검색 링크 노출, 포스트 BreadcrumbList 추가, FinancialService sameAs 정리

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         "bestRating": "5",
         "worstRating": "1"
       },
-      "review": [
+    "review": [
         {
           "@type": "Review",
           "author": {
@@ -176,12 +176,7 @@
           "datePublished": "2024-12-10",
           "reviewBody": "안전하고 신뢰할 수 있는 서비스입니다. 상담도 친절하고 빠른 처리가 좋네요."
         }
-      ],
-      "sameAs": [
-        "https://www.facebook.com/",
-        "https://twitter.com/",
-        "https://www.instagram.com/"
-      ],
+            ],
       "contactPoint": [{
         "@type": "ContactPoint",
         "telephone": "+82-10-5842-9536",
@@ -270,6 +265,7 @@
                 <nav class="hidden md:flex items-center gap-6">
                     <a href="#services" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">서비스 안내</a>
                     <a href="#features" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">오렌지Pay 특징</a>
+                    <a href="/search.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">검색</a>
                     <a href="blog/index.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">최신 소식</a>
                     <a href="#faq" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">자주묻는질문</a>
                     <a href="#contact" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">고객센터</a>
@@ -288,6 +284,7 @@
             <nav class="flex flex-col p-4 gap-2">
                 <a href="#services" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">서비스 안내</a>
                 <a href="#features" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">오렌지Pay 특징</a>
+                <a href="/search.html" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">검색</a>
                 <a href="blog/index.html" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">최신 소식</a>
                 <a href="#faq" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">자주묻는질문</a>
                 <a href="#contact" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">고객센터</a>
