--- a/index.html
+++ b/index.html
@@ -266,9 +266,10 @@
                     <a href="#services" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">서비스 안내</a>
                     <a href="#features" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">오렌지Pay 특징</a>
                     <a href="/search.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">검색</a>
+                    <a href="/about.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">소개</a>
                     <a href="blog/index.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">최신 소식</a>
                     <a href="#faq" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">자주묻는질문</a>
-                    <a href="#contact" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">고객센터</a>
+                    <a href="/contact.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">고객센터</a>
                 </nav>
 
                 <!-- Mobile Menu Button -->
@@ -285,9 +286,10 @@
                 <a href="#services" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">서비스 안내</a>
                 <a href="#features" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">오렌지Pay 특징</a>
                 <a href="/search.html" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">검색</a>
+                <a href="/about.html" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">소개</a>
                 <a href="blog/index.html" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">최신 소식</a>
                 <a href="#faq" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">자주묻는질문</a>
-                <a href="#contact" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">고객센터</a>
+                <a href="/contact.html" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">고객센터</a>
             </nav>
         </div>
     </header>
@@ -465,6 +467,10 @@
     <footer class="bg-slate-900 text-slate-400">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-10 text-center">
             <div class="mb-4">
+                <a href="/about.html" class="text-sm hover:text-white mx-2 transition-colors">소개</a>
+                <span class="text-slate-600">|</span>
+                <a href="/contact.html" class="text-sm hover:text-white mx-2 transition-colors">고객센터</a>
+                <span class="text-slate-600">|</span>
                 <a href="/terms.html" class="text-sm hover:text-white mx-2 transition-colors">이용약관</a>
                 <span class="text-slate-600">|</span>
                 <a href="/privacy.html" class="text-sm hover:text-white mx-2 transition-colors">개인정보처리방침</a>
