--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <meta name="keywords" content="신용카드 현금화, 소액결제 현금화, 정보이용료 현금화, 상품권 매입, 오렌지Pay, 안전한 현금화, 24시간 상담, 최저 수수료, 블로그">
     <meta name="author" content="오렌지Pay">
     <link rel="canonical" href="https://pay24.store/">
+    <link rel="alternate" hreflang="ko-KR" href="https://pay24.store/">
+    <link rel="alternate" hreflang="x-default" href="https://pay24.store/">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta http-equiv="Content-Language" content="ko-KR">
     <link rel="alternate" type="application/rss+xml" title="오렌지Pay RSS" href="/rss.xml">
         <meta property="og:image" content="https://pay24.store/img/og-image.webp">
         <meta property="og:image:alt" content="오렌지Pay 공식 서비스 대표 이미지">
