feat(news): add news hub (/news) with ticker/hero/grid; nav links; sitemap update

--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
                     <a href="#features" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">오렌지Pay 특징</a>
                     <a href="/search.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">검색</a>
                     <a href="/about.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">소개</a>
-                    <a href="blog/index.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">최신 소식</a>
+                    <a href="/news/" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">뉴스</a>
+                    <a href="/blog/" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">블로그</a>
                     <a href="#faq" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">자주묻는질문</a>
                     <a href="/contact.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">고객센터</a>
                 </nav>
@@ -289,7 +290,8 @@
                 <a href="#features" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">오렌지Pay 특징</a>
                 <a href="/search.html" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">검색</a>
                 <a href="/about.html" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">소개</a>
-                <a href="blog/index.html" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">최신 소식</a>
+                <a href="/news/" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">뉴스</a>
+                <a href="/blog/" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">블로그</a>
                 <a href="#faq" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">자주묻는질문</a>
                 <a href="/contact.html" class="mobile-nav-link block px-4 py-3 rounded-md font-medium text-slate-600 hover:bg-orange-50 hover:text-orange-600 transition-colors">고객센터</a>
             </nav>
