UI(news): header weight, ticker speed+mask, trending/hero emphasis, tabs styling, badge color; UI(home): header emphasis

--- a/index.html
+++ b/index.html
@@ -254,25 +254,25 @@
 <body class="bg-slate-50 text-slate-700">
 
     <!-- Header -->
-    <header id="header" class="bg-white/80 backdrop-blur-lg sticky top-0 z-50 shadow-sm">
+    <header id="header" class="bg-white/80 backdrop-blur-lg sticky top-0 z-50 shadow-lg">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <a href="#" class="flex items-center gap-2">
                     <i class="fa-solid fa-credit-card text-orange-500 text-3xl"></i>
-                    <span class="text-2xl font-extrabold text-slate-800 tracking-tight">오렌지Pay</span>
+                    <span class="text-3xl font-extrabold text-orange-600 tracking-tight">오렌지Pay</span>
                 </a>
 
                 <!-- Desktop Navigation -->
-                <nav class="hidden md:flex items-center gap-6">
-                    <a href="#services" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">서비스 안내</a>
-                    <a href="#features" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">오렌지Pay 특징</a>
-                    <a href="/search.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">검색</a>
-                    <a href="/about.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">소개</a>
-                    <a href="/news/" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">뉴스</a>
-                    <a href="/blog/" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">블로그</a>
-                    <a href="#faq" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">자주묻는질문</a>
-                    <a href="/contact.html" class="text-base font-medium text-slate-600 hover:text-orange-500 transition-colors">고객센터</a>
+                <nav class="hidden md:flex items-center gap-6 font-semibold">
+                    <a href="#services" class="text-base text-slate-600 hover:text-orange-500 transition-colors">서비스 안내</a>
+                    <a href="#features" class="text-base text-slate-600 hover:text-orange-500 transition-colors">오렌지Pay 특징</a>
+                    <a href="/search.html" class="text-base text-slate-600 hover:text-orange-500 transition-colors">검색</a>
+                    <a href="/about.html" class="text-base text-slate-600 hover:text-orange-500 transition-colors">소개</a>
+                    <a href="/news/" class="text-base text-slate-600 hover:text-orange-500 transition-colors">뉴스</a>
+                    <a href="/blog/" class="text-base text-slate-600 hover:text-orange-500 transition-colors">블로그</a>
+                    <a href="#faq" class="text-base text-slate-600 hover:text-orange-500 transition-colors">자주묻는질문</a>
+                    <a href="/contact.html" class="text-base text-slate-600 hover:text-orange-500 transition-colors">고객센터</a>
                 </nav>
 
                 <!-- Mobile Menu Button -->
