fix(seo): convert redirectors to indexable landing pages (remove meta-refresh/JS)

--- a/apple-google.html
+++ b/apple-google.html
@@ -2,17 +2,12 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/" />
-    <title>오렌지Pay | 메인페이지로 이동 중...</title>
-    <meta name="robots" content="noindex, nofollow">
+  <title>오렌지Pay | 메인페이지 안내</title>
+  <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://pay24.store/">
-    <script>
-      // 301 리디렉트와 유사한 효과를 위해 즉시 리디렉트
-      if (typeof window !== 'undefined') {
-        window.location.replace('/');
-      }
-    </script>
+    <!-- Removed immediate redirect to make this page indexable.
+         If you want an HTTP 301 redirect, set it up at the host/CDN (Cloudflare Page Rule, Netlify redirects, etc.). -->
     <style>
       body { 
         display: flex; 
