--- a/index.html
+++ b/index.html
@@ -353,6 +353,28 @@
             </div>
         </section>
 
+        <!-- Recommended Guide Section -->
+        <section id="recommended-guide" class="py-12 bg-white">
+            <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="max-w-4xl mx-auto p-6 md:p-8 rounded-2xl border border-slate-200 bg-gradient-to-br from-orange-50 to-white">
+                    <div class="flex flex-col md:flex-row items-start md:items-center gap-4 md:gap-6">
+                        <div class="shrink-0 w-12 h-12 rounded-full bg-orange-100 flex items-center justify-center">
+                            <i class="fa-solid fa-star text-orange-600"></i>
+                        </div>
+                        <div class="flex-1">
+                            <h3 class="text-xl md:text-2xl font-extrabold text-slate-900">신용카드 현금화 업체 비교·선정 가이드 2025</h3>
+                            <p class="mt-1 text-slate-600">수수료·합법·안전 체크리스트와 위험 신호를 한눈에. 합법·정책 준수 기준만 안내합니다.</p>
+                        </div>
+                        <div class="shrink-0">
+                            <a href="/신용카드-현금화-업체-가이드-2025.html" class="inline-flex items-center px-4 py-2 rounded-lg bg-orange-600 text-white font-semibold hover:bg-orange-700">
+                                바로 보기 <i class="fa-solid fa-arrow-right ml-2"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Features Section -->
         <section id="features" class="py-16 md:py-24 bg-slate-50">
             <div class="container mx-auto px-4 sm:px-6 lg:px-8">
