--- a/신용카드-현금화-업체-가이드-2025.html
+++ b/신용카드-현금화-업체-가이드-2025.html
@@ -81,6 +81,41 @@
     <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight">신용카드 현금화 업체 비교·선정 가이드 2025</h1>
     <p class="mt-3 text-slate-600">수수료·합법·안전 체크리스트와 위험 신호를 한눈에. 무리 없이, 약관을 지키는 안전한 진행만 안내합니다.</p>
 
+    <!-- 오렌지Pay 상담/상품 안내 -->
+    <section class="mt-6 p-6 rounded-2xl border bg-gradient-to-br from-orange-50 to-white">
+      <div class="flex flex-col md:flex-row md:items-center gap-4 md:gap-6">
+        <div class="shrink-0 w-12 h-12 rounded-full bg-orange-100 flex items-center justify-center">
+          <i class="fa-solid fa-bullhorn text-orange-600"></i>
+        </div>
+        <div class="flex-1">
+          <h2 class="text-xl md:text-2xl font-extrabold text-slate-900">오렌지Pay 상담 · 상품 요약</h2>
+          <p class="mt-1 text-slate-600">합법·약관 준수 원칙으로만 안내합니다. 조건에 따라 지급률·진행 가능 여부가 달라질 수 있습니다.</p>
+        </div>
+        <div class="shrink-0 flex gap-2">
+          <a href="tel:010-5842-9536" class="inline-flex items-center px-4 py-2 rounded-lg bg-orange-600 text-white font-semibold hover:bg-orange-700">
+            <i class="fa-solid fa-phone mr-2"></i> 전화 상담
+          </a>
+          <a href="https://pf.kakao.com/_SBFexb/chat" target="_blank" rel="noopener nofollow" class="inline-flex items-center px-4 py-2 rounded-lg bg-yellow-400 text-slate-900 font-semibold hover:bg-yellow-300">
+            <i class="fa-solid fa-comment-dots mr-2"></i> 카카오톡 상담
+          </a>
+        </div>
+      </div>
+
+      <div class="mt-5 grid md:grid-cols-2 gap-4">
+        <div class="p-5 rounded-xl border bg-white">
+          <h3 class="text-lg font-bold text-slate-900">비상금 신용카드(신카)</h3>
+          <p class="text-slate-600 mt-1">상품권·물품 구매 후 현금 지급</p>
+          <p class="mt-2 text-slate-800"><strong>지급률: 85% ~ 90%</strong></p>
+        </div>
+        <div class="p-5 rounded-xl border bg-white">
+          <h3 class="text-lg font-bold text-slate-900">비상금 소액결제(휴대폰)</h3>
+          <p class="text-slate-600 mt-1">정보이용료/콘텐츠 결제 기반</p>
+          <p class="mt-2 text-slate-800"><strong>지급률: 75%</strong></p>
+        </div>
+      </div>
+      <p class="mt-3 text-xs text-slate-500">지급률은 예시이며 금액/한도/정산 방식·정책에 따라 변동될 수 있습니다. 불법 ‘카드깡’ 권유나 약관 위반 행위는 진행하지 않습니다.</p>
+    </section>
+
     <!-- 강력 경고 배너 -->
     <div class="mt-6 p-5 rounded-xl border bg-red-50 border-red-200 text-red-800">
       <div class="font-bold mb-1">중요 안내</div>
