--- a/신용카드-현금화-업체-가이드-2025.html
+++ b/신용카드-현금화-업체-가이드-2025.html
@@ -109,7 +109,7 @@
         </div>
         <div class="p-5 rounded-xl border bg-white">
           <h3 class="text-lg font-bold text-slate-900">비상금 소액결제(휴대폰)</h3>
-          <p class="text-slate-600 mt-1">정보이용료/콘텐츠 결제 기반</p>
+          <p class="text-slate-600 mt-1">휴대폰소액결제/물품 결제 기반</p>
           <p class="mt-2 text-slate-800"><strong>지급률: 75%</strong></p>
         </div>
       </div>
