fix: use tailwind.min.css and remove stray </script>

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     <!-- Tailwind CSS -->
     <!-- Static CSS (Performance) -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/tailwind.min.css">
+    <link rel="preload" href="css/tailwind.min.css" as="style">
 
     <!-- Font Awesome -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
@@ -190,7 +190,6 @@
                 "query-input": "required name=search_term_string"
             }
         }
-        </script>
         </script>
 
         <!-- BreadcrumbList JSON-LD -->
