fix: switch Font Awesome to jsDelivr CDN for reliability

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="preload" href="css/tailwind.min.css" as="style">
 
-    <!-- Font Awesome -->
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- Font Awesome (use jsDelivr for better availability) -->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" as="style" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" crossorigin="anonymous">
 
     <!-- Custom Styles & Tailwind Config -->
     <style>
